--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,8 @@
             "name": "Launch via NPM",
             "request": "launch",
             "runtimeArgs": [
-                "run-script",
-                "debug"
+                "run",
+                "start"
             ],
             "runtimeExecutable": "npm",
             "skipFiles": [
