--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.4.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
