--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.7",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.4.0",
+    "classnames": "^2.3.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
